* Added 'shrink database' to backend UI (SQL CE unsupported) * Minor UI tweaks in checkout process * Minor UI tweaks in backend > move pictures * Minor language resources fixes

--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -228,6 +228,10 @@
     <Compile Include="Migrations\201502280342294_LocalizedPropertyIndex.Designer.cs">
       <DependentUpon>201502280342294_LocalizedPropertyIndex.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201503032227054_V22Res.cs" />
+    <Compile Include="Migrations\201503032227054_V22Res.Designer.cs">
+      <DependentUpon>201503032227054_V22Res.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
     <Compile Include="Setup\Builder\SettingsMigrator.cs" />
     <Compile Include="Setup\DbMigrationContext.cs" />
@@ -452,6 +456,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201502280342294_LocalizedPropertyIndex.resx">
       <DependentUpon>201502280342294_LocalizedPropertyIndex.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201503032227054_V22Res.resx">
+      <DependentUpon>201503032227054_V22Res.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
