--- a/src/Presentation/SmartStore.Web/Themes/Web.config
+++ b/src/Presentation/SmartStore.Web/Themes/Web.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <configuration>
   <system.webServer>
-    <handlers accessPolicy="Script,Read">	  
-	  <!-- theme file inheritance -->
+    <handlers accessPolicy="Script,Read">
+     <add name="ThemePreviewImage" path="*/preview.png" verb="*" modules="StaticFileModule" preCondition="integratedMode" resourceType="File" requireAccess="Read"/>
+	  
+      <!-- theme file inheritance -->
       <add name="StaticFileHandler-png" path="*.png" verb="GET,HEAD" type="System.Web.StaticFileHandler"/>
       <add name="StaticFileHandler-gif" path="*.gif" verb="GET,HEAD" type="System.Web.StaticFileHandler"/>
       <add name="StaticFileHandler-jpg" path="*.jpg" verb="GET,HEAD" type="System.Web.StaticFileHandler"/>
