--- a/src/Presentation/SmartStore.Web/51Degrees.config
+++ b/src/Presentation/SmartStore.Web/51Degrees.config
@@ -93,7 +93,7 @@
     -->
 
     <!-- IMPORTANT - Ensure this link is uncomment after purchasing Enhanced Device Data. -->
-    <detection enabled="true" autoUpdate="true" binaryFilePath="~/App_Data/51Degrees.dat" />
+    <detection enabled="true" autoUpdate="false" shareUsage="false" memoryMode="false" bandwidthMonitoringEnabled="false" featureDetectionEnabled="false" />
 
     <!-- <imageOptimisation> elements controls the operation of the image optimiser. If not specified
     the functionality is disabled.
