--- a/src/Presentation/SmartStore.Web/Themes/Web.config
+++ b/src/Presentation/SmartStore.Web/Themes/Web.config
@@ -2,7 +2,8 @@
 <configuration>
   <system.webServer>
     <handlers accessPolicy="Script,Read">
-     <add name="ThemePreviewImage" path="*/preview.png" verb="*" modules="StaticFileModule" preCondition="integratedMode" resourceType="File" requireAccess="Read"/>
+      <!-- static files -->
+      <add name="ThemePreviewImage" path="*/preview.png" verb="*" modules="StaticFileModule" preCondition="integratedMode" resourceType="File" requireAccess="Read"/>
 	  
       <!-- theme file inheritance -->
       <add name="StaticFileHandler-png" path="*.png" verb="GET,HEAD" type="System.Web.StaticFileHandler"/>
