Updated sample images

--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -975,7 +975,6 @@
     <Content Include="Content\Images\smartstore.net-200-white.png" />
     <Content Include="Content\install\images\bg.png" />
     <Content Include="Content\print.css" />
-    <Content Include="Content\samples\0000730-apple-iphone-4s-weis.jpg" />
     <Content Include="Content\samples\0000740-antonio-vivaldi-der-fruhling-100.jpg" />
     <Content Include="Content\samples\0000746_apple_125.png" />
     <Content Include="Content\samples\0000785-apple-iphone.png" />
@@ -983,41 +982,31 @@
     <Content Include="Content\samples\0000787-apple-iphone.jpg" />
     <Content Include="Content\samples\0000788-apple-iphone.png" />
     <Content Include="Content\samples\0000789-apple-iphone.jpg" />
-    <Content Include="Content\samples\0000898_blackberry.jpeg" />
-    <Content Include="Content\samples\0000899_htc.png" />
     <Content Include="Content\samples\0000904_samsung_125.jpeg" />
     <Content Include="Content\samples\0000930_spiegel-bestseller.png" />
     <Content Include="Content\samples\0000932_uberman-der-roman.jpeg" />
     <Content Include="Content\samples\0000935_der-gefangene-des-himmels-roman_300.jpeg" />
     <Content Include="Content\samples\0000936_kochen-geniesen.jpeg" />
-    <Content Include="Content\samples\0000937_best-grilling-recipes.jpeg" />
-    <Content Include="Content\samples\0000938_cooking-for-two.jpeg" />
     <Content Include="Content\samples\0000942_bildatlas-motorrader-mit-mehr-als-350-brillanten-abbildungen.jpeg" />
     <Content Include="Content\samples\0000943_motorrad-abenteuer-fahrtechnik-fur-reise-enduros.jpeg" />
     <Content Include="Content\samples\0000944_autos-der-superlative-die-starksten-die-ersten-die-schonsten-die-schnellsten.jpeg" />
     <Content Include="Content\samples\0000946_fast-cars-bildkalender-2013_300.jpeg" />
     <Content Include="Content\samples\0000947_das-auto-buch-die-grose-chronik-mit-uber-1200-modellen_300.jpeg" />
-    <Content Include="Content\samples\0000953_dell-inspiron-one-23.jpeg" />
     <Content Include="Content\samples\0000954_dell-inspiron-one-23.jpeg" />
     <Content Include="Content\samples\0000956_dell-inspiron-one-23.jpeg" />
-    <Content Include="Content\samples\0000993_trekstor.jpeg" />
-    <Content Include="Content\samples\0000994_western-digital.jpeg" />
-    <Content Include="Content\samples\0001085_canon.jpeg" />
-    <Content Include="Content\samples\0001086_casio.jpeg" />
-    <Content Include="Content\samples\0001087_panasonic.jpeg" />
-    <Content Include="Content\samples\0001328_certina_125.jpeg" />
-    <Content Include="Content\samples\0001338_samsung.jpeg" />
-    <Content Include="Content\samples\0001424-certina-ds-podium-big-size-herrenchronograph.jpg" />
-    <Content Include="Content\samples\0001514_uhren.jpeg" />
-    <Content Include="Content\samples\0001591_festina.jpeg" />
     <Content Include="Content\samples\01-12Hand_Aspire1.jpg" />
     <Content Include="Content\samples\58_00007561.jpg" />
-    <Content Include="Content\samples\acer-aspire-one.jpg" />
     <Content Include="Content\samples\acer-logo.jpg" />
     <Content Include="Content\samples\beethoven-fur-elise.mp3" />
     <Content Include="Content\samples\Beethoven.jpg" />
-    <Content Include="Content\samples\category_gaming.jpg" />
-    <Content Include="Content\samples\category_gaming_accessories.jpg" />
+    <Content Include="Content\samples\category_cellphone.png" />
+    <Content Include="Content\samples\category_computers.png" />
+    <Content Include="Content\samples\category_desktops.png" />
+    <Content Include="Content\samples\category_digitaldownloads.jpg" />
+    <Content Include="Content\samples\category_games.png" />
+    <Content Include="Content\samples\category_gaming.png" />
+    <Content Include="Content\samples\category_gaming_accessories.png" />
+    <Content Include="Content\samples\category_watches.png" />
     <Content Include="Content\samples\clouds.png" />
     <Content Include="Content\samples\company_logo.png" />
     <Content Include="Content\samples\Dell_Logo.png" />
@@ -1025,12 +1014,27 @@
     <Content Include="Content\samples\HP_Logo_2012.svg.png" />
     <Content Include="Content\samples\iphone.png" />
     <Content Include="Content\samples\manufacturer-android.png" />
+    <Content Include="Content\samples\manufacturer-blackberry.png" />
+    <Content Include="Content\samples\manufacturer-canon.png" />
+    <Content Include="Content\samples\manufacturer-casio.png" />
+    <Content Include="Content\samples\manufacturer-certina.png" />
+    <Content Include="Content\samples\manufacturer-htc.png" />
     <Content Include="Content\samples\manufacturer-lg.png" />
     <Content Include="Content\samples\manufacturer-microsoft.png" />
+    <Content Include="Content\samples\manufacturer-panasonic.png" />
+    <Content Include="Content\samples\manufacturer-trekstor.png" />
+    <Content Include="Content\samples\manufacturer-westerndigital.png" />
+    <Content Include="Content\samples\manufacturer_festina.png" />
     <Content Include="Content\samples\msi_logo1.jpg" />
     <Content Include="Content\samples\music.png" />
     <Content Include="Content\samples\packshot-net.png" />
-    <Content Include="Content\samples\sony-Dualshock3WirelessCont.jpg" />
+    <Content Include="Content\samples\product_aceraspiresl1500.png" />
+    <Content Include="Content\samples\product_bestgrillingrecipes.jpg" />
+    <Content Include="Content\samples\product_certina_ds_podium_big.png" />
+    <Content Include="Content\samples\product_cookingfortwo.jpg" />
+    <Content Include="Content\samples\product_dellinspiron23.png" />
+    <Content Include="Content\samples\product_giftcart.png" />
+    <Content Include="Content\samples\product_playstation3dualshock3.png" />
     <Content Include="Content\samples\sony-Dualshock4WirelessCont.jpg" />
     <Content Include="Content\samples\sony-logo.jpg" />
     <Content Include="Content\samples\sony-ps3-black.jpg" />
@@ -1557,12 +1561,7 @@
     <Content Include="Content\samples\category_apparel_shoes.jpeg" />
     <Content Include="Content\samples\category_book.jpeg" />
     <Content Include="Content\samples\category_camera_photo.jpeg" />
-    <Content Include="Content\samples\category_cell_phones.jpeg" />
-    <Content Include="Content\samples\category_computers.jpeg" />
-    <Content Include="Content\samples\category_desktops.jpg" />
-    <Content Include="Content\samples\category_digital_downloads.jpeg" />
     <Content Include="Content\samples\category_electronics.jpeg" />
-    <Content Include="Content\samples\category_games.jpg" />
     <Content Include="Content\samples\category_gift_cards.jpeg" />
     <Content Include="Content\samples\category_jeans.jpg" />
     <Content Include="Content\samples\category_jewelry.jpeg" />
@@ -1571,10 +1570,6 @@
     <Content Include="Content\samples\category_shoes.jpg" />
     <Content Include="Content\samples\category_software.jpg" />
     <Content Include="Content\samples\product_AdobePhotoshop.jpeg" />
-    <Content Include="Content\samples\product_5giftcart.jpeg" />
-    <Content Include="Content\samples\product_25giftcart.jpeg" />
-    <Content Include="Content\samples\product_50giftcart.jpeg" />
-    <Content Include="Content\samples\product_100giftcart.jpeg" />
     <Content Include="Content\samples\product_AcerAspireOne_1.jpeg" />
     <Content Include="Content\samples\product_AcerAspireOne_2.jpeg" />
     <Content Include="Content\samples\product_AdidasShoe_1.jpg" />
