Replaced and deleted some sample images

--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -976,7 +976,6 @@
     <Content Include="Content\install\images\bg.png" />
     <Content Include="Content\print.css" />
     <Content Include="Content\samples\0000740-antonio-vivaldi-der-fruhling-100.jpg" />
-    <Content Include="Content\samples\0000746_apple_125.png" />
     <Content Include="Content\samples\0000785-apple-iphone.png" />
     <Content Include="Content\samples\0000786-apple-iphone.png" />
     <Content Include="Content\samples\0000787-apple-iphone.jpg" />
@@ -1006,26 +1005,32 @@
     <Content Include="Content\samples\category_games.png" />
     <Content Include="Content\samples\category_gaming.png" />
     <Content Include="Content\samples\category_gaming_accessories.png" />
+    <Content Include="Content\samples\category_giftcards.png" />
+    <Content Include="Content\samples\category_notebooks.png" />
     <Content Include="Content\samples\category_watches.png" />
     <Content Include="Content\samples\clouds.png" />
     <Content Include="Content\samples\company_logo.png" />
-    <Content Include="Content\samples\Dell_Logo.png" />
     <Content Include="Content\samples\emblem_library.png" />
-    <Content Include="Content\samples\HP_Logo_2012.svg.png" />
     <Content Include="Content\samples\iphone.png" />
     <Content Include="Content\samples\manufacturer-android.png" />
     <Content Include="Content\samples\manufacturer-blackberry.png" />
     <Content Include="Content\samples\manufacturer-canon.png" />
     <Content Include="Content\samples\manufacturer-casio.png" />
     <Content Include="Content\samples\manufacturer-certina.png" />
+    <Content Include="Content\samples\manufacturer-dell.png" />
+    <Content Include="Content\samples\manufacturer-hp.png" />
     <Content Include="Content\samples\manufacturer-htc.png" />
     <Content Include="Content\samples\manufacturer-lg.png" />
     <Content Include="Content\samples\manufacturer-microsoft.png" />
+    <Content Include="Content\samples\manufacturer-msi.png" />
     <Content Include="Content\samples\manufacturer-panasonic.png" />
+    <Content Include="Content\samples\manufacturer-samsung.png" />
     <Content Include="Content\samples\manufacturer-trekstor.png" />
     <Content Include="Content\samples\manufacturer-westerndigital.png" />
+    <Content Include="Content\samples\manufacturer_apple.png" />
     <Content Include="Content\samples\manufacturer_festina.png" />
-    <Content Include="Content\samples\msi_logo1.jpg" />
+    <Content Include="Content\samples\manufacturer_sony.png" />
+    <Content Include="Content\samples\manufacturer_ubisoft.png" />
     <Content Include="Content\samples\music.png" />
     <Content Include="Content\samples\packshot-net.png" />
     <Content Include="Content\samples\product_aceraspiresl1500.png" />
@@ -1035,18 +1040,16 @@
     <Content Include="Content\samples\product_dellinspiron23.png" />
     <Content Include="Content\samples\product_giftcart.png" />
     <Content Include="Content\samples\product_playstation3dualshock3.png" />
-    <Content Include="Content\samples\sony-Dualshock4WirelessCont.jpg" />
-    <Content Include="Content\samples\sony-logo.jpg" />
-    <Content Include="Content\samples\sony-ps3-black.jpg" />
-    <Content Include="Content\samples\sony-ps3-plus-game.jpg" />
+    <Content Include="Content\samples\product_sony_dualshock4_wirelesscontroller.png" />
+    <Content Include="Content\samples\product_sony_ps3_black.png" />
+    <Content Include="Content\samples\product_sony_ps3_plus_game.png" />
+    <Content Include="Content\samples\product_sony_ps4.png" />
+    <Content Include="Content\samples\product_sony_ps4_bundle.png" />
+    <Content Include="Content\samples\product_sony_ps4_camera.png" />
     <Content Include="Content\samples\sony-ps3-white.jpg" />
     <Content Include="Content\samples\sony-PS3AssassinsCreedBundle.png" />
-    <Content Include="Content\samples\sony-ps4-bundle.jpg" />
-    <Content Include="Content\samples\sony-ps4-camera.jpg" />
-    <Content Include="Content\samples\sony-ps4.jpg" />
     <Content Include="Content\samples\ubisoft-assassins-creed-3.jpg" />
     <Content Include="Content\samples\ubisoft-driver-san-francisco.jpg" />
-    <Content Include="Content\samples\ubisoft-logo.jpg" />
     <Content Include="Content\samples\ubisoft-prince-of-persia.jpg" />
     <Content Include="Content\samples\ubisoft-watchdogs.jpg" />
     <Content Include="Content\samples\vivaldi-four-seasons-spring.mp3" />
@@ -1562,76 +1565,9 @@
     <Content Include="Content\samples\category_book.jpeg" />
     <Content Include="Content\samples\category_camera_photo.jpeg" />
     <Content Include="Content\samples\category_electronics.jpeg" />
-    <Content Include="Content\samples\category_gift_cards.jpeg" />
-    <Content Include="Content\samples\category_jeans.jpg" />
-    <Content Include="Content\samples\category_jewelry.jpeg" />
-    <Content Include="Content\samples\category_notebooks.jpg" />
-    <Content Include="Content\samples\category_shirts.jpg" />
-    <Content Include="Content\samples\category_shoes.jpg" />
-    <Content Include="Content\samples\category_software.jpg" />
-    <Content Include="Content\samples\product_AdobePhotoshop.jpeg" />
     <Content Include="Content\samples\product_AcerAspireOne_1.jpeg" />
     <Content Include="Content\samples\product_AcerAspireOne_2.jpeg" />
-    <Content Include="Content\samples\product_AdidasShoe_1.jpg" />
-    <Content Include="Content\samples\product_AdidasShoe_2.jpg" />
-    <Content Include="Content\samples\product_ApcUps.jpeg" />
-    <Content Include="Content\samples\product_arrow.jpg" />
-    <Content Include="Content\samples\product_asuspc1000.jpeg" />
-    <Content Include="Content\samples\product_asuspc900.jpeg" />
-    <Content Include="Content\samples\product_Baseball.jpeg" />
-    <Content Include="Content\samples\product_BattleOfLA.jpeg" />
-    <Content Include="Content\samples\product_BestGrillingRecipes.jpeg" />
-    <Content Include="Content\samples\product_BestSkilletRecipes.jpeg" />
-    <Content Include="Content\samples\product_BlackBerry.jpeg" />
-    <Content Include="Content\samples\product_CanonCamcoder.jpeg" />
-    <Content Include="Content\samples\product_CanonCamera_1.jpeg" />
-    <Content Include="Content\samples\product_CanonCamera_2.jpeg" />
-    <Content Include="Content\samples\product_CanonCamera_black.jpeg" />
-    <Content Include="Content\samples\product_CanonCamera_silver.jpeg" />
-    <Content Include="Content\samples\product_Compaq.jpeg" />
-    <Content Include="Content\samples\product_CookingForTwo.jpeg" />
-    <Content Include="Content\samples\product_Corel.jpeg" />
-    <Content Include="Content\samples\product_CustomTShirt.jpeg" />
-    <Content Include="Content\samples\product_DenimShort.jpg" />
-    <Content Include="Content\samples\product_Desktops_1.jpeg" />
-    <Content Include="Content\samples\product_Desktops_2.jpeg" />
-    <Content Include="Content\samples\product_Desktops_3.jpeg" />
-    <Content Include="Content\samples\product_DiamondBracelet_1.jpg" />
-    <Content Include="Content\samples\product_DiamondBracelet_2.jpg" />
-    <Content Include="Content\samples\product_DiamondEarrings.jpg" />
-    <Content Include="Content\samples\product_DiamondHeart.jpg" />
-    <Content Include="Content\samples\product_EatingWell.jpeg" />
-    <Content Include="Content\samples\product_EngagementRing_1.jpg" />
-    <Content Include="Content\samples\product_EngagementRing_2.jpg" />
-    <Content Include="Content\samples\product_Etnies.jpg" />
-    <Content Include="Content\samples\product_GolfBelt.jpeg" />
-    <Content Include="Content\samples\product_hat.jpg" />
-    <Content Include="Content\samples\product_Hp506.jpeg" />
-    <Content Include="Content\samples\product_HpPavilion1.jpeg" />
-    <Content Include="Content\samples\product_HpPavilion2_1.jpeg" />
-    <Content Include="Content\samples\product_HpPavilion2_2.jpeg" />
-    <Content Include="Content\samples\product_HpPavilion3.jpeg" />
-    <Content Include="Content\samples\product_Kensington.jpeg" />
-    <Content Include="Content\samples\product_LeatherHandbag_1.jpg" />
-    <Content Include="Content\samples\product_LeatherHandbag_2.jpg" />
-    <Content Include="Content\samples\product_LeviJeans_1.jpg" />
-    <Content Include="Content\samples\product_LeviJeans_2.jpg" />
-    <Content Include="Content\samples\product_MedalOfHonor.jpeg" />
-    <Content Include="Content\samples\product_Mouse.jpeg" />
-    <Content Include="Content\samples\product_Notebooks.jpeg" />
-    <Content Include="Content\samples\product_PokerFace.jpeg" />
-    <Content Include="Content\samples\product_PokerFace_2.txt" />
-    <Content Include="Content\samples\product_productPanasonic.jpeg" />
-    <Content Include="Content\samples\product_RockabillyPolka.jpg" />
     <Content Include="Content\Images\Thumbs\placeholder.txt" />
-    <Content Include="Content\samples\product_SamsungPhone_1.jpeg" />
-    <Content Include="Content\samples\product_SamsungPhone_2.jpeg" />
-    <Content Include="Content\samples\product_SingleLadies.jpeg" />
-    <Content Include="Content\samples\product_SingleLadies_2.txt" />
-    <Content Include="Content\samples\product_Soccer.jpeg" />
-    <Content Include="Content\samples\product_SonyCamcoder.jpeg" />
-    <Content Include="Content\samples\product_Sunglasses.jpg" />
-    <Content Include="Content\samples\product_wow.jpeg" />
     <Content Include="Content\bootstrap\custom\select2.less" />
     <Content Include="Content\bootstrap\custom\images\select2.png" />
     <Content Include="Global.asax" />
@@ -1981,9 +1917,6 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\samples\product_BattleOfLa_1.zip" />
-    <Content Include="Content\samples\product_PokerFace_1.zip" />
-    <Content Include="Content\samples\product_SingleLadies_1.zip" />
     <Content Include="App_Data\GeoIP.dat" />
     <Content Include="Views\Customer\Login.cshtml" />
     <Content Include="Views\Customer\Register.cshtml" />
