--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -232,6 +232,10 @@
     <Compile Include="Migrations\201503032227054_V22Res.Designer.cs">
       <DependentUpon>201503032227054_V22Res.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201503101851123_PdfConverterUser.cs" />
+    <Compile Include="Migrations\201503101851123_PdfConverterUser.Designer.cs">
+      <DependentUpon>201503101851123_PdfConverterUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
     <Compile Include="Setup\Builder\SettingsMigrator.cs" />
     <Compile Include="Setup\DbMigrationContext.cs" />
@@ -459,6 +463,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201503032227054_V22Res.resx">
       <DependentUpon>201503032227054_V22Res.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201503101851123_PdfConverterUser.resx">
+      <DependentUpon>201503101851123_PdfConverterUser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
