--- a/src/Libraries/SmartStore.Services/packages.config
+++ b/src/Libraries/SmartStore.Services/packages.config
@@ -14,4 +14,5 @@
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
   <package id="NReco.PdfGenerator" version="1.1.3.0" targetFramework="net45" />
   <package id="System.Linq.Dynamic" version="1.0.0" targetFramework="net45" />
+  <package id="UAParser" version="1.2.0.0" targetFramework="net45" />
 </packages>
