Mobile device detection is now a custom implementation based on UAParser. Also detects some commonly used Tablets (iPad, Nexus 10, Kindle etc.) and renders the desktop view by default. Removed 51Degrees library completely.

--- a/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
+++ b/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
@@ -478,6 +478,7 @@
     <Content Include="Views\QuantityUnit\Create.cshtml" />
     <Content Include="Views\QuantityUnit\Edit.cshtml" />
     <Content Include="Views\QuantityUnit\List.cshtml" />
+    <Content Include="Views\Home\UaTester.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\admin.less" />
