Resolves #560 Return requests: Add fields for last update, last update of requested action and general notes Resolves #588 Alternative localized category name used as title for category pages Resolves #589 Backend product list: Add filter for products with "no category mapping" and "no manufacturer mapping" Resolves #592 Add a second category description displayed beyond products on category page Resolves #626 Add IsActive flag for checkout attributes

--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -240,6 +240,10 @@
     <Compile Include="Migrations\201502120858030_Licensing.Designer.cs">
       <DependentUpon>201502120858030_Licensing.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201504111815146_NewCategoryProperties.cs" />
+    <Compile Include="Migrations\201504111815146_NewCategoryProperties.Designer.cs">
+      <DependentUpon>201504111815146_NewCategoryProperties.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
     <Compile Include="Setup\Builder\SettingsMigrator.cs" />
     <Compile Include="Setup\DbMigrationContext.cs" />
@@ -474,6 +478,9 @@
     <EmbeddedResource Include="Migrations\201502120858030_Licensing.resx">
       <DependentUpon>201502120858030_Licensing.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201504111815146_NewCategoryProperties.resx">
+      <DependentUpon>201504111815146_NewCategoryProperties.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
   </ItemGroup>
@@ -488,6 +495,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Sql\StoredProcedures.Inverse.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Sql\LatestProductLoadAllPaged.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
