Web API: minor changes and improvements

--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -398,7 +398,8 @@
     <Compile Include="WebApi\OData\WebApiQueryableAttribute.cs" />
     <Compile Include="WebApi\Security\HmacAuthentication.cs" />
     <Compile Include="WebApi\Security\WebApiAuthenticateAttribute.cs" />
-    <Compile Include="WebApi\WebApiCaching.cs" />
+    <Compile Include="WebApi\Caching\WebApiCachingControllingData.cs" />
+    <Compile Include="WebApi\Caching\WebApiCachingUserData.cs" />
     <Compile Include="WebApi\WebApiCore.cs" />
     <Compile Include="WebApi\WebApiEntityController.cs" />
     <Compile Include="WebApi\WebApiExtension.cs" />
