--- a/src/Plugins/SmartStore.GoogleMerchantCenter/SmartStore.GoogleMerchantCenter.csproj
+++ b/src/Plugins/SmartStore.GoogleMerchantCenter/SmartStore.GoogleMerchantCenter.csproj
@@ -164,6 +164,10 @@
     <Compile Include="Data\Migrations\201408020941244_IsTouched.Designer.cs">
       <DependentUpon>201408020941244_IsTouched.cs</DependentUpon>
     </Compile>
+    <Compile Include="Data\Migrations\201504211854125_IsActive.cs" />
+    <Compile Include="Data\Migrations\201504211854125_IsActive.Designer.cs">
+      <DependentUpon>201504211854125_IsActive.cs</DependentUpon>
+    </Compile>
     <Compile Include="Data\Migrations\Configuration.cs" />
     <Compile Include="DependencyRegistrar.cs" />
     <Compile Include="Domain\GoogleProductRecord.cs" />
@@ -206,6 +210,9 @@
     </Content>
     <EmbeddedResource Include="Data\Migrations\201408020941244_IsTouched.resx">
       <DependentUpon>201408020941244_IsTouched.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Data\Migrations\201504211854125_IsActive.resx">
+      <DependentUpon>201504211854125_IsActive.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
