Minor web.config fixes

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -141,6 +141,7 @@
         Handles all requests, includung static ones. 
         Allows us to handle requests for specific static resources per managed handlers.
       -->
+      <remove name="SmartUrlRoutingModule"/>
       <add name="SmartUrlRoutingModule" type="SmartStore.Web.Framework.SmartUrlRoutingModule" preCondition=""/>
     </modules>
     <handlers accessPolicy="Script,Read">
@@ -148,10 +149,13 @@
       <remove name="OPTIONS"/>
       <remove name="TRACEVerbHandler"/>
       <!-- sitemap.xml -->
+      <remove name="sitemap" />
       <add name="sitemap" path="sitemap.xml" verb="*" type="System.Web.Routing.UrlRoutingModule" resourceType="Unspecified" preCondition="integratedMode"/>
       <!-- robots.txt -->
+      <remove name="robots" />
       <add name="robots" path="robots.txt" verb="*" type="System.Web.Routing.UrlRoutingModule" resourceType="Unspecified" preCondition="integratedMode"/>
       <!-- *.less -->
+      <remove name="LessAssetHandler" />
       <add name="LessAssetHandler" path="*.less" verb="GET" type="SmartStore.Web.Framework.Themes.LessCssHttpHandler, SmartStore.Web.Framework" resourceType="File" preCondition="integratedMode"/>
       <!-- WebApi -->
       <remove name="ExtensionlessUrlHandler-Integrated-4.0"/>
