Minor web.config fix 2

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -180,6 +180,7 @@
     <security>
       <requestFiltering>
         <hiddenSegments>
+          <remove segment="ClearScript.V8" />
           <add segment="ClearScript.V8"/>
         </hiddenSegments>
       </requestFiltering>
