--- a/src/Plugins/SmartStore.WebApi/SmartStore.WebApi.csproj
+++ b/src/Plugins/SmartStore.WebApi/SmartStore.WebApi.csproj
@@ -114,6 +114,7 @@
       <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Client.5.1.2\lib\net45\System.Net.Http.Formatting.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http.WebRequest" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Routing" />
     <Reference Include="System.Spatial, Version=5.6.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -181,6 +182,7 @@
     </Compile>
     <Compile Include="Controllers\Api\HomeController.cs" />
     <Compile Include="Controllers\Api\PaymentsController.cs" />
+    <Compile Include="Controllers\Api\UploadsController.cs" />
     <Compile Include="Controllers\OData\AddressesController.cs" />
     <Compile Include="Controllers\OData\CategoriesController.cs" />
     <Compile Include="Controllers\OData\CountriesController.cs" />
@@ -219,6 +221,7 @@
     <Compile Include="Controllers\WebApiController.cs" />
     <Compile Include="DependencyRegistrar.cs" />
     <Compile Include="Extensions\MiscExtensions.cs" />
+    <Compile Include="Models\Api\UploadImage.cs" />
     <Compile Include="Models\WebApiConfigModel.cs" />
     <Compile Include="Models\WebApiUserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -296,13 +299,13 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>False</UseIIS>
+          <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>0</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:53128/</IISUrl>
+          <IISUrl>http://localhost:49567/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
-          <UseCustomServer>True</UseCustomServer>
+          <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>http://www.smartstore.net</CustomServerUrl>
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
