Resolves #594 Option to prevent a message from being automatically sent

--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -256,6 +256,10 @@
     <Compile Include="Migrations\201504270946381_TempFileCleanupTask.Designer.cs">
       <DependentUpon>201504270946381_TempFileCleanupTask.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201504271444091_SendEmailsManually.cs" />
+    <Compile Include="Migrations\201504271444091_SendEmailsManually.Designer.cs">
+      <DependentUpon>201504271444091_SendEmailsManually.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
     <Compile Include="Setup\Builder\SettingsMigrator.cs" />
     <Compile Include="Setup\DbMigrationContext.cs" />
@@ -500,6 +504,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201504270946381_TempFileCleanupTask.resx">
       <DependentUpon>201504270946381_TempFileCleanupTask.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201504271444091_SendEmailsManually.resx">
+      <DependentUpon>201504271444091_SendEmailsManually.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
