--- a/src/Tests/SmartStore.Services.Tests/App.config
+++ b/src/Tests/SmartStore.Services.Tests/App.config
@@ -1,33 +1,33 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="SmartStoreConfig" type="SmartStore.Core.Configuration.SmartStoreConfig, SmartStore.Core" requirePermission="false"/>
+    <section name="SmartStoreConfig" type="SmartStore.Core.Configuration.SmartStoreConfig, SmartStore.Core" requirePermission="false" />
   </configSections>
   <SmartStoreConfig>
-    <DynamicDiscovery Enabled="true"/>
-    <Engine Type=""/>
+    <DynamicDiscovery Enabled="true" />
+    <Engine Type="" />
   </SmartStoreConfig>
   <appSettings>
-    <add key="Setting1" value="SomeValue"/>
-    <add key="Setting2" value="25"/>
-    <add key="Setting3" value="12/25/2010"/>
+    <add key="Setting1" value="SomeValue" />
+    <add key="Setting2" value="25" />
+    <add key="Setting3" value="12/25/2010" />
 
-    <add key="TestSettings.ServerName" value="Ruby"/>
-    <add key="TestSettings.Ip" value="192.168.0.1"/>
-    <add key="TestSettings.PortNumber" value="21"/>
-    <add key="TestSettings.Username" value="admin"/>
-    <add key="TestSettings.Password" value="password"/>
+    <add key="TestSettings.ServerName" value="Ruby" />
+    <add key="TestSettings.Ip" value="192.168.0.1" />
+    <add key="TestSettings.PortNumber" value="21" />
+    <add key="TestSettings.Username" value="admin" />
+    <add key="TestSettings.Password" value="password" />
   </appSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/></startup>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" /></startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0"/>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
